--- a/drip/templates/dashboard/settings.html
+++ b/drip/templates/dashboard/settings.html
@@ -4,8 +4,8 @@
     <h1>Settings</h1>
 
     <form action="" method="post" id="mailchimp_form" name="mailchimp">
-        {{ form.csrf_token() }}
-        {{ form.api_key() }}
+        {{ mc_form.csrf_token() }}
+        {{ mc_form.api_key() }}
         <button type="submit" class="main-cta login-form-cta">Set key</button>
     </form>
 {% endblock %}
