Split js and sass files for `landingpage` and `dashboard` modules

--- a/drip/templates/landing/base.html
+++ b/drip/templates/landing/base.html
@@ -10,6 +10,6 @@
 {% endblock %}
 
 {% block assets_foot %}
-    <script type="text/javascript" src="{{ url_for('static', filename='dist/bundle.js') }}"
+    <script type="text/javascript" src="{{ url_for('static', filename='dist/landingpage.bundle.js') }}"
             charset="utf-8"></script>
 {% endblock %}
