--- a/drip/templates/dashboard/base.html
+++ b/drip/templates/dashboard/base.html
@@ -31,6 +31,7 @@
 {% endblock %}
 
 {% block assets_foot %}
-    <script type="text/javascript" src="{{ url_for('static', filename='dist/bundle.js') }}"
+    <script type="text/javascript"
+            src="{{ url_for('static', filename='dist/dashboard.bundle.js') }}"
             charset="utf-8"></script>
 {% endblock %}
