Move navbar to base

--- a/drip/templates/landing/landing.html
+++ b/drip/templates/landing/landing.html
@@ -1,33 +1,10 @@
 {% extends "landing/base.html" %}
 
 {% block content_middle %}
-    <!-- Top menu -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#top-navbar-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Jedy - Bootstrap Landing Page</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="top-navbar-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a class="scroll-link" href="{{ url_for('main.login') }}">Login</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
     <!-- Top content -->
     <div class="top-content">
         <div class="inner-bg">
             <div class="container">
-
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 text">
                         <h1>Beautiful <strong>Landing Page</strong></h1>
@@ -187,19 +164,16 @@
                     <div class="great-support-box-text great-support-box-text-left">
                         <h3>Ut wisi enim ad minim</h3>
 
-                        <p class="medium-paragraph">
-                            Lorem ipsum dolor sit amet, <span class="colored-text">consectetur adipisicing</span>
-                            elit,
+                        <p>
+                            Lorem ipsum dolor sit amet, elit,
                             sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim
                             veniam, quis nostrud.
                         </p>
 
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et.
-                            Ut wisi enim ad minim veniam, quis nostrud.
-                            Exerci tation ullamcorper suscipit <span class="colored-text">lobortis nisl</span>
-                            ut aliquip ex ea commodo consequat.
+                            tempor incididunt ut labore eUt wisi enim ad minim veniam, quis nostrud.
+                            Exerci tation ullamcorper suscipit ut aliquip ex ea commodo consequat.
                             Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
                             suscipit lobortis nisl.
                         </p>
