--- a/drip/static/sass/landingpage.scss
+++ b/drip/static/sass/landingpage.scss
@@ -15,11 +15,6 @@ strong {
 a, a:hover, a:focus {
   color: #66d6c5;
   text-decoration: none;
-  -o-transition: all .3s;
-  -moz-transition: all .3s;
-  -webkit-transition: all .3s;
-  -ms-transition: all .3s;
-  transition: all .3s;
 }
 
 h1, h2 {
@@ -43,15 +38,6 @@ img {
   max-width: 100%;
 }
 
-.medium-paragraph {
-  font-size: 18px;
-  line-height: 32px;
-}
-
-.colored-text {
-  color: #66d6c5;
-}
-
 ::-moz-selection {
   background: #66d6c5;
   color: #fff;
@@ -64,70 +50,45 @@ img {
   text-shadow: none;
 }
 
-/***** Loader *****/
-
-.loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  overflow: hidden !important;
-  z-index: 99999;
-}
-
-.loader-img {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -30px 0 0 -30px;
-  width: 60px;
-  height: 60px;
-  background: url(/static/img/loading.gif) center center no-repeat;
-}
-
 /***** General style, all sections *****/
 
 .section-container {
   margin: 0 auto;
   padding-bottom: 80px;
-}
 
-.section-container-gray-bg {
-  background: #f8f8f8;
-  border-top: 1px dotted #ddd;
-  border-bottom: 1px dotted #ddd;
-}
+  &.section-container-gray-bg {
+    background: #f8f8f8;
+    border-top: 1px dotted #ddd;
+    border-bottom: 1px dotted #ddd;
+  }
 
-.section-container-image-bg,
-.section-container-image-bg h2,
-.section-container-image-bg h3 {
-  color: #fff;
-}
+  &.section-container-image-bg,
+  &.section-container-image-bg h2,
+  &.section-container-image-bg h3 {
+    color: #fff;
+  }
 
-.section-container-image-bg .divider-1 span {
-  border-color: #fff;
-}
+  .section-container-image-bg .divider-1 span {
+    border-color: #fff;
+  }
 
-.section-description {
-  margin-top: 60px;
-  padding-bottom: 10px;
-}
+  .section-description {
+    margin-top: 60px;
+    padding-bottom: 10px;
+  }
 
-.section-description p {
-  margin-top: 20px;
-  padding: 0 120px;
-}
+  .section-description p {
+    margin-top: 20px;
+    padding: 0 120px;
+  }
 
-.section-container-image-bg .section-description p {
-  opacity: 0.8;
-}
+  .section-container-image-bg .section-description p {
+    opacity: 0.8;
+  }
 
-.section-bottom-button {
-  padding-top: 60px;
+  .section-bottom-button {
+    padding-top: 60px;
+  }
 }
 
 .btn-link-1 {
@@ -189,11 +150,6 @@ img {
   margin-bottom: 0;
   background: #444;
   border: 0;
-  -o-transition: all .6s;
-  -moz-transition: all .6s;
-  -webkit-transition: all .6s;
-  -ms-transition: all .6s;
-  transition: all .6s;
 }
 
 .navbar.navbar-no-bg {
@@ -278,11 +234,6 @@ ul.navbar-nav {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  -o-transition: all .6s;
-  -moz-transition: all .6s;
-  -webkit-transition: all .6s;
-  -ms-transition: all .6s;
-  transition: all .6s;
 }
 
 .features-box .features-box-icon:hover {
@@ -353,38 +304,33 @@ ul.navbar-nav {
 
 /***** Great support *****/
 
-.great-support-container {
-  padding-bottom: 60px;
-}
-
 .great-support-box {
   margin-top: 30px;
   margin-bottom: 20px;
-}
 
-.great-support-box-text {
-  margin-top: 40px;
-  padding-left: 30px;
-  overflow: hidden;
-  text-align: left;
-}
+  .great-support-container {
+    padding-bottom: 60px;
+  }
 
-.great-support-box-text:first-child {
-  margin-top: 20px;
-}
+  .great-support-box-text {
+    margin-top: 40px;
+    padding-left: 30px;
+    overflow: hidden;
+    text-align: left;
+  }
 
-.great-support-box-text-left {
-  padding-left: 0;
-  padding-right: 30px;
-}
+  .great-support-box-text:first-child {
+    margin-top: 20px;
+  }
 
-.great-support-box-text h3 {
-  margin-top: 0;
-}
+  .great-support-box-text-left {
+    padding-left: 0;
+    padding-right: 30px;
+  }
 
-.great-support-box-text .medium-paragraph {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  .great-support-box-text h3 {
+    margin-top: 0;
+  }
 }
 
 /***** How it works *****/
