--- a/drip/templates/dashboard/base.html
+++ b/drip/templates/dashboard/base.html
@@ -4,29 +4,38 @@
 {% endblock %}
 
 {% block content %}
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">Drip Trooper</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('dashboard.settings') }}">Settings</a></li>
-                    <li><a href="{{ url_for('main.logout') }}">Logout</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </nav>
+    <div class="wrapper">
+        <div class="sidebar" data-color="purple" data-image="/light-bootstrap-dashboard/assets/img/sidebar-5.jpg">
+            <div class="sidebar-wrapper">
+                <div class="logo">
+                    <a href="{{ url_for('main.index') }}" class="simple-text">
+                        Dripper
+                    </a>
+                </div>
 
-    <div class="container dashboard">
-        {% block content_middle %}{% endblock %}
+                <ul class="nav">
+                    <li {% if active_nav == 'index' %}class="active"{% endif %}>
+                        <a href="{{ url_for('main.index') }}">
+                            <i class="pe-7s-graph"></i>
+
+                            <p>Drip campaigns</p>
+                        </a>
+                    </li>
+                    <li {% if active_nav == 'settings' %}class="active"{% endif %}>
+                        <a href="{{ url_for('dashboard.settings') }}">
+                            <i class="pe-7s-user"></i>
+
+                            <p>Settings</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="sidebar-background" style="background-image: url('/static/img/dashboard/sidebar-5.jpg');"></div>
+        </div>
+
+        <div class="main-panel">
+            {% block content_middle %}{% endblock %}
+        </div>
     </div>
 {% endblock %}
 
