--- a/drip/static/sass/dashboard.scss
+++ b/drip/static/sass/dashboard.scss
@@ -273,3 +273,250 @@ body > .navbar-collapse[data-color="purple"]:after {
   background: linear-gradient(to bottom, #9368E9 0%, #943bea 100%);
   background-size: 150% 150%;
 }
+
+.card {
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
+}
+
+.card .image {
+  width: 100%;
+  overflow: hidden;
+  height: 260px;
+  border-radius: 4px 4px 0 0;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.card .image img {
+  width: 100%;
+}
+
+.card .filter {
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.68);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.card .filter .btn {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.card:hover .filter {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.card .btn-hover {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.card:hover .btn-hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.card .content {
+  padding: 15px 15px 10px 15px;
+}
+
+.card .header {
+  padding: 15px 15px 0;
+}
+
+.card .category,
+.card label {
+  font-size: 14px;
+  font-weight: 400;
+  color: #9A9A9A;
+  margin-bottom: 0px;
+}
+
+.card .category i,
+.card label i {
+  font-size: 16px;
+}
+
+.card label {
+  font-size: 12px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+
+.card .title {
+  margin: 0;
+  color: #333333;
+  font-weight: 300;
+}
+
+.card .avatar {
+  width: 30px;
+  height: 30px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.card .description {
+  font-size: 14px;
+  color: #333;
+}
+
+.card .footer {
+  padding: 0;
+  background-color: transparent;
+  line-height: 30px;
+}
+
+.card .footer .legend {
+  padding: 5px 0;
+}
+
+.card .footer hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.card .stats {
+  color: #a9a9a9;
+}
+
+.card .footer div {
+  display: inline-block;
+}
+
+.card .author {
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.card .author i {
+  font-size: 14px;
+}
+
+.card h6 {
+  font-size: 12px;
+  margin: 0;
+}
+
+.card.card-separator:after {
+  height: 100%;
+  right: -15px;
+  top: 0;
+  width: 1px;
+  background-color: #DDDDDD;
+  content: "";
+  position: absolute;
+}
+
+.card .ct-chart {
+  margin: 30px 0 30px;
+  height: 245px;
+}
+
+.card .table tbody td:first-child,
+.card .table thead th:first-child {
+  padding-left: 15px;
+}
+
+.card .table tbody td:last-child,
+.card .table thead th:last-child {
+  padding-right: 15px;
+}
+
+.card .alert {
+  border-radius: 4px;
+  position: relative;
+}
+
+.card .alert.alert-with-icon {
+  padding-left: 65px;
+}
+
+.alert {
+  border: 0;
+  border-radius: 4px;
+  color: #FFFFFF;
+  padding: 10px 15px;
+  font-size: 14px;
+}
+
+.alert span[data-notify="icon"] {
+  font-size: 30px;
+  display: block;
+  left: 15px;
+  position: absolute;
+  top: 50%;
+  margin-top: -15px;
+}
+
+.alert button.close {
+  position: absolute;
+  right: 22px;
+  top: 35%;
+  margin-top: -13px;
+  z-index: 1033;
+  background-color: #FFFFFF;
+  display: block;
+  border-radius: 50%;
+  opacity: .4;
+  line-height: 11px;
+  width: 25px;
+  height: 25px;
+  outline: 0 !important;
+  text-align: center;
+  padding: 3px;
+  font-weight: 300;
+}
+
+.alert button.close:hover {
+  opacity: .55;
+}
+
+.alert .close ~ span {
+  display: block;
+  max-width: 89%;
+}
+
+.alert[data-notify="container"] {
+  padding: 10px 10px 10px 20px;
+  border-radius: 4px;
+}
+
+.alert.alert-with-icon {
+  padding-left: 65px;
+}
+
+.alert-info {
+  background-color: #63d8f1;
+}
+
+.alert-success {
+  background-color: #a1e82c;
+}
+
+.alert-warning {
+  background: #ffbc67 none;
+}
+
+.alert-danger {
+  background-color: #fc727a;
+}
+
