features and description copy added

--- a/drip/templates/landing/landing.html
+++ b/drip/templates/landing/landing.html
@@ -7,18 +7,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 text">
-                        <h1>Beautiful <strong>Landing Page</strong></h1>
+                        <h1>Personalised and engaging <strong>emails</strong></h1>
 
                         <div class="description">
                             <p>
-                                This is a free responsive landing page made with the Bootstrap
-                                framework.
-                                Check it out now. Download it, customize and use it as you like!
+                                Boost your sales by sending email drip campaigns!
                             </p>
                         </div>
                         <div class="top-big-link">
-                            <a class="btn btn-link-1" href="http://azmind.com">Download it</a>
-                            <a class="btn btn-link-2 scroll-link" href="#features">Learn more</a>
+                            <a class="btn btn-link-1" href="http://azmind.com">Get it</a>
+                            <a class="btn btn-link-2 scroll-link" href="#features">Why Drip campaigns?</a>
                         </div>
                     </div>
                 </div>
@@ -47,28 +45,25 @@
                     <div class="features-box-icon">
                         <i class="fa fa-magic"></i>
                     </div>
-                    <h3>Easy To Use</h3>
+                    <h3>Right timing</h3>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et.</p>
+                    <p>Set right time for each of your emails to reach your customer at the right time.</p>
                 </div>
                 <div class="col-sm-4 features-box">
                     <div class="features-box-icon">
                         <i class="fa fa-thumbs-o-up"></i>
                     </div>
-                    <h3>Responsive Design</h3>
+                    <h3>Adaptive content</h3>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et.</p>
+                    <p>Personalise your email campaign by changing content based on reciepient behaviour</p>
                 </div>
                 <div class="col-sm-4 features-box">
                     <div class="features-box-icon">
                         <i class="fa fa-cog"></i>
                     </div>
-                    <h3>Uses Bootstrap</h3>
+                    <h3>Track performance</h3>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et.</p>
+                    <p>Measure campaign performance and know what is working and where changes are needed!</p>
                 </div>
             </div>
             <div class="row">
@@ -162,20 +157,17 @@
             <div class="row">
                 <div class="col-sm-7 great-support-box">
                     <div class="great-support-box-text great-support-box-text-left">
-                        <h3>Ut wisi enim ad minim</h3>
+                        <h3>Why drip campaigns?</h3>
 
                         <p>
-                            Lorem ipsum dolor sit amet, elit,
-                            sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim
-                            veniam, quis nostrud.
+                            Drip e-mail campaigns are part of marketing automation tools.
                         </p>
 
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore eUt wisi enim ad minim veniam, quis nostrud.
-                            Exerci tation ullamcorper suscipit ut aliquip ex ea commodo consequat.
-                            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper
-                            suscipit lobortis nisl.
+                            Campaign usually consists of series of emails which are scheduled with aim to move customer down the sales funnel. The main goal is to build build relationship gradually and not trying to put every piece of content in one hard sales email.. Because campaign consists of set of emails it is possible to adapt content on the way. For example based on customer click history or purchase behaviour.
+                        </p>
+                        <p>
+                            As a result customers have personalised experience and store owners have boosted revenue and increased customer loyalty!
                         </p>
                     </div>
                 </div>
