--- a/drip/static/sass/dashboard.scss
+++ b/drip/static/sass/dashboard.scss
@@ -534,3 +534,36 @@ body > .navbar-collapse[data-color="purple"]:after {
     font-size: 30px;
   }
 }
+
+.add-node {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 32px;
+
+  &:before {
+    border-top: 2px solid #dfdfdf;
+    content: "";
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 95%;
+    z-index: -1;
+  }
+
+  .btn {
+    background: #8BC34A;
+    color: #fff;
+    border: 4px solid #FFFFFF;
+
+    margin-left: 10px;
+    margin-right: 10px;
+
+    box-shadow: 0 0 18px -6px #777;
+    border-radius: 50%;
+  }
+}
