Actions that are specific to only one template should be referenced

--- a/drip/static/sass/dashboard.scss
+++ b/drip/static/sass/dashboard.scss
@@ -528,6 +528,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   border: 1px solid #e5e5e5;
   border-radius: 6px;
   margin: 15px 0;
+  background-color: white;
 
   .date {
     font-weight: 700;
