Pass list of all nodes to each node, so we can set triggers.

--- a/drip/templates/dashboard/base.html
+++ b/drip/templates/dashboard/base.html
@@ -16,7 +16,7 @@ Dashboard Base View
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a href="{{ url_for('main.index') }}" class="simple-text">
-                        Dripper
+                        Dripit
                     </a>
                 </div>
 
