--- a/drip/static/sass/dashboard.scss
+++ b/drip/static/sass/dashboard.scss
@@ -567,3 +567,42 @@ body > .navbar-collapse[data-color="purple"]:after {
     border-radius: 50%;
   }
 }
+
+.node-controle {
+  position: absolute;
+  right: 20px;
+  top: -20px;
+
+  .controle-btn {
+    width: 40px;
+    height: 40px;
+
+    display: inline-flex;
+    background: #8BC34A;
+    color: #fff;
+    border: 4px solid #FFFFFF;
+
+    margin-left: 5px;
+    margin-right: 5px;
+
+    box-shadow: 0 0 18px -6px #777;
+    border-radius: 50%;
+
+    i {
+      margin-top: 3px;
+      margin-left: -2px;
+    }
+
+    &.primary {
+      background: #1DC7EA;
+    }
+
+    &.danger {
+      background: #FB404B;
+    }
+
+    &.success {
+      background: #87CB16;
+    }
+  }
+}
