Added logout button

--- a/drip/templates/dashboard/base.html
+++ b/drip/templates/dashboard/base.html
@@ -35,6 +35,13 @@ Dashboard Base View
                             <p>Settings</p>
                         </a>
                     </li>
+                    <li>
+                        <a href="{{ url_for('main.logout') }}">
+                            <i class="pe-7s-user"></i>
+
+                            <p>Logout</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div class="sidebar-background"
