--- a/drip/static/sass/landingpage.scss
+++ b/drip/static/sass/landingpage.scss
@@ -1,310 +1,120 @@
 
+html,
 body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  color: #888;
-  line-height: 30px;
+  font-family: Roboto, sans-serif;
+}
+
+.header-col {
+  height: 600px;
+  background-image: url('/static/img/landingpage/background.png');
+  background-repeat: repeat;
+  background-position: center top;
+
+  .header-text {
+    color: white;
+    text-align: center;
+
+    margin-top: 100px;
+
+    .description {
+      margin: 20px 0 10px 0;
+
+      p {
+        opacity: 0.8;
+      }
+    }
+
+    .top-big-link {
+      margin-top: 35px;
+
+      .btn {
+        display: inline-block;
+        height: 50px;
+        margin: 0 5px;
+        padding: 16px 20px 0 20px;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 16px;
+        color: #fff;
+        border-radius: 4px;
+        border-radius: 4px;
+
+        &.btn-link-1 {
+          background: #66d6c5;
+        }
+
+        &.btn-link-2 {
+          background: #444;
+          background: rgba(0, 0, 0, 0.3);
+        }
+      }
+    }
+  }
+}
+
+.nav-wrapper {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+
+  .navbar-brand,
+  ul.nav li a {
+    color: white;
+
+    &:hover {
+      background-color: inherit;
+    }
+  }
+}
+
+.row-header {
   text-align: center;
-}
-
-strong {
-  font-weight: 500;
-}
-
-a, a:hover, a:focus {
-  color: #66d6c5;
-  text-decoration: none;
-}
-
-h1, h2 {
-  margin-top: 10px;
-  font-size: 38px;
-  font-weight: 100;
-  color: #555;
-  line-height: 50px;
-  text-transform: uppercase;
-}
-
-h3 {
-  font-size: 22px;
-  font-weight: 300;
-  color: #555;
-  line-height: 30px;
-  text-transform: uppercase;
-}
-
-img {
-  max-width: 100%;
-}
-
-/***** General style, all sections *****/
-
-.section-container {
-  margin: 0 auto;
-  padding-bottom: 80px;
-
-  .section-description {
-    margin-top: 60px;
-    padding-bottom: 10px;
-  }
-
-  .section-description p {
-    margin-top: 20px;
-    padding: 0 120px;
-  }
-}
-
-.btn-link-1 {
-  display: inline-block;
-  height: 50px;
-  margin: 0 5px;
-  padding: 16px 20px 0 20px;
-  background: #66d6c5;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 16px;
-  color: #fff;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-}
-
-.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active {
-  outline: 0;
-  opacity: 0.6;
-  color: #fff;
-}
-
-.btn-link-2 {
-  display: inline-block;
-  height: 50px;
-  margin: 0 5px;
-  padding: 16px 20px 0 20px;
-  background: #444;
-  background: rgba(0, 0, 0, 0.3);
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 16px;
-  color: #fff;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-}
-
-.btn-link-2:hover, .btn-link-2:focus,
-.btn-link-2:active, .btn-link-2:active:focus {
-  outline: 0;
-  opacity: 0.6;
-  background: rgba(0, 0, 0, 0.3);
-  color: #fff;
-}
-
-/***** Divider *****/
-
-.divider-1 span {
-  display: inline-block;
-  width: 200px;
-  border-bottom: 1px dotted #aaa;
-}
-
-/***** Top menu *****/
-
-.navbar {
-  margin-bottom: 0;
-  background: #444;
-  border: 0;
-}
-
-.navbar.navbar-no-bg {
-  background: none;
-}
-
-ul.navbar-nav {
-  font-size: 16px;
-  color: #fff;
-}
-
-.navbar-inverse ul.navbar-nav li a {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #fff;
-  opacity: 0.8;
-}
-
-.navbar-inverse ul.navbar-nav li a:hover {
-  color: #fff;
-  opacity: 1;
-}
-
-.navbar-inverse ul.navbar-nav li a:focus {
-  color: #fff;
-  outline: 0;
-  opacity: 1;
-}
-
-.navbar-brand {
-  width: 72px;
-  height: 60px;
-  background: url(/static/img/logo.png) left center no-repeat;
-  text-indent: -99999px;
-}
-
-.navbar-toggle {
-  margin-top: 13px;
-  margin-bottom: 13px;
-}
-
-/***** Top content *****/
-
-.inner-bg {
-  padding: 280px 0;
-}
-
-.top-content .text {
-  color: #fff;
-}
-
-.top-content .text h1 {
-  color: #fff;
-}
-
-.top-content .description {
-  margin: 20px 0 10px 0;
-}
-
-.top-content .description p {
-  opacity: 0.8;
-}
-
-.top-content .top-big-link {
-  margin-top: 35px;
-}
-
-/***** Features *****/
-
-.features-box {
-  padding-top: 30px;
-}
-
-.features-box .features-box-icon {
-  width: 120px;
-  height: 120px;
-  margin: 0 auto;
-  background: #f8f8f8;
-  font-size: 60px;
-  color: #555;
-  line-height: 120px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-}
-
-.features-box .features-box-icon:hover {
-  background: #66d6c5;
-}
-
-.features-box h3 {
-  margin-top: 15px;
-  padding: 10px 0;
-}
-
-/***** More features *****/
-
-.more-features-container {
-  padding-bottom: 60px;
-}
-
-.more-features-box {
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-
-.more-features-box-text {
-  margin-top: 40px;
-  padding-left: 30px;
-  overflow: hidden;
-  text-align: left;
-}
-
-.more-features-box-text:first-child {
   margin-top: 20px;
-}
-
-.more-features-box-text-left {
-  padding-left: 0;
-  padding-right: 30px;
-}
-
-.more-features-box-text-icon {
-  float: left;
-  width: 60px;
-  height: 60px;
-  padding-top: 6px;
-  background: #66d6c5;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  font-size: 32px;
-  color: #555;
-  line-height: 40px;
-  text-align: center;
-}
-
-.more-features-box-text-icon i {
-  vertical-align: middle;
-}
-
-.more-features-box-text h3 {
-  float: right;
-  width: 86%;
-  margin-top: 0;
-}
-
-.more-features-box-text-description {
-  float: right;
-  width: 86%;
-}
-
-/***** Great support *****/
-
-.great-support-box {
-  margin-top: 30px;
   margin-bottom: 20px;
 
-  .great-support-container {
-    padding-bottom: 60px;
-  }
-
-  .great-support-box-text {
-    margin-top: 40px;
-    padding-left: 30px;
-    overflow: hidden;
-    text-align: left;
-  }
-
-  .great-support-box-text:first-child {
-    margin-top: 20px;
-  }
-
-  .great-support-box-text-left {
-    padding-left: 0;
-    padding-right: 30px;
-  }
-
-  .great-support-box-text h3 {
-    margin-top: 0;
+  .divider-1 {
+    span {
+      display: inline-block;
+      width: 200px;
+      border-bottom: 1px dotted #aaa;
+    }
   }
 }
 
-/***** Footer *****/
+.marketing {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+
+  h2 {
+    font-weight: normal;
+  }
+
+  .col-md-4 {
+    margin-bottom: 20px;
+    text-align: center;
+
+    p {
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+  }
+}
+
+.support {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+
+  padding-left: 100px;
+  padding-right: 100px;
+
+  margin-top: 80px;
+}
 
 footer {
-  padding: 40px 0 35px 0;
-  background: #f8f8f8;
-  border-top: 1px dotted #ddd;
-}
-
-.footer-copyright {
-  margin-top: 25px;
+  margin-top: 100px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
