--- a/drip/templates/base.html
+++ b/drip/templates/base.html
@@ -17,10 +17,10 @@
           crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"
-          integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"
-          crossorigin="anonymous">
+{#    <link rel="stylesheet"#}
+{#          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"#}
+{#          integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX"#}
+{#          crossorigin="anonymous">#}
     {% block assets_head %}{% endblock %}
 </head>
 <body>
