Fixed signup page bug

--- a/drip/templates/landing/signup.html
+++ b/drip/templates/landing/signup.html
@@ -19,7 +19,7 @@
                             {{ form.password(placeholder="Password", class="form-password form-control") }}
                         </div>
                         <div class="form-group">
-                            {{ form.password(placeholder="Password repeat", class="form-password form-control") }}
+                            {{ form.password_repeat(placeholder="Password repeat", class="form-password form-control") }}
                         </div>
                         <button type="submit" class="btn btn-default">SIGN UP</button>
                     </form>
