Changed nginx config. Create stats socket for uwsgi.

--- a/deploy/roles/app/templates/drip.conf.j2
+++ b/deploy/roles/app/templates/drip.conf.j2
@@ -1,9 +1,9 @@
 server {
     charset utf-8;
 
-    server_name driptrooper.com localhost;
+    server_name dripit.io localhost;
 
-    access_log /var/log/drip/access.log reachly;
+    access_log /var/log/drip/access.log drip;
     error_log /var/log/drip/error.log info;
 
     location  /static {
@@ -35,6 +35,6 @@ server {
 server {
     listen 80;
 
-    server_name www.driptrooper.com;
+    server_name www.dripit.io;
 }
 
