--- a/deploy/roles/app/templates/drip.uwsgi.ini.j2
+++ b/deploy/roles/app/templates/drip.uwsgi.ini.j2
@@ -33,4 +33,6 @@ touch-reload = %(base_dir)/touch-reload
 enable-threads = true
 single-interpreter = true
 
+stats = /tmp/drip.stats.socket
+
 plugins = python
