--- a/drip/templates/landing/base.html
+++ b/drip/templates/landing/base.html
@@ -2,6 +2,7 @@
 
 {% block assets_head %}
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ url_for('static', filename="dist/landingpage.css") }}">
 {% endblock %}
 
 {% block content %}
