--- a/drip/static/sass/dashboard.scss
+++ b/drip/static/sass/dashboard.scss
@@ -612,3 +612,9 @@ body > .navbar-collapse[data-color="purple"]:after {
     }
   }
 }
+
+.removeTrigger,
+.addTrigger {
+  cursor: pointer;
+  line-height: 2;
+}
