Add memory report for uwsgi

--- a/deploy/roles/app/templates/drip.uwsgi.ini.j2
+++ b/deploy/roles/app/templates/drip.uwsgi.ini.j2
@@ -33,6 +33,8 @@ touch-reload = %(base_dir)/touch-reload
 enable-threads = true
 single-interpreter = true
 
+# get stats from uwsgitop
 stats = /tmp/drip.stats.socket
+memory-report = true
 
 plugins = python
